# zk-engine

./: .gitignore  Cargo.toml  README.md
.github/: build.yml
.github/workflows/: build.yml
client/: Cargo.toml
client/configuration/: base.yaml  local.yaml  production.yaml
client/src/: configuration.rs  lib.rs  main.rs
client/src/adapters/: mod.rs  telemetry.rs
client/src/adapters/rest_api/: handlers.rs  mod.rs  structs.rs
client/src/adapters/rest_api/handlers/: block.rs  keys.rs  mint.rs  preimage.rs  transfer.rs
client/src/domain/: keypair.rs  mod.rs  stored_preimage.rs  transaction.rs
client/src/ports/: committable.rs  keys.rs  mod.rs  notifier.rs  prover.rs  storage.rs
client/src/services/: derive_keys.rs  mod.rs  user_keys.rs
client/src/services/notifier/: mod.rs
client/src/services/prover/: mod.rs
client/src/services/storage/: mod.rs
client/src/usecase/: create_keys.rs  mint.rs  mod.rs  transfer.rs
client/src/usecase/mint/: compute_preimages.rs  inputs.rs  mint_tokens.rs  mod.rs  send_transaction.rs  store_preimages.rs
client/src/usecase/transfer/: inputs.rs  mod.rs  transfer_tokens.rs
client/src/utils/: circuits.rs
client/tests/api/: health.rs  helpers.rs  keys.rs  main.rs  mint.rs  transfer.rs
client/tests/api/helpers/: circuits.rs  keys.rs  mint.rs  preimages.rs  sequencer.rs  utils.rs
common/: Cargo.toml
common/examples/: poseidon_gen.rs
common/src/: configuration.rs  curves.rs  derived_keys.rs  keypair.rs  lib.rs  serialize.rs  structs.rs
common/src/crypto/: mod.rs
common/src/crypto/poseidon/: mod.rs
common/src/crypto/poseidon/constants/: mod.rs  pasta_fq.rs  pasta_fr.rs
common/src/ports/: notifier.rs
common/src/services/notifier/: mod.rs
integration_tests/: Cargo.toml
integration_tests/configuration/: base.yaml  local.yaml
integration_tests/src/: lib.rs  main.rs  test_app.rs
integration_tests/src/client/: circuits.rs  keys.rs  mint.rs  mod.rs  preimages.rs  sequencer.rs  state.rs  test_app.rs  transfer.rs  tree_db.rs
integration_tests/src/common/: circuits.rs  mod.rs  utils.rs
integration_tests/src/sequencer/: circuits.rs  client.rs  mod.rs  sequence.rs  test_app.rs  transactions.rs
integration_tests/tests/client/: block.rs  health.rs  keys.rs  main.rs  mint.rs  transfer.rs
integration_tests/tests/full/: transactions.rs
integration_tests/tests/sequencer/: health.rs  main.rs  sequence.rs  transactions.rs
macros/: Cargo.toml
macros/src/: lib.rs
plonk/: Cargo.toml
plonk/benches/: base_circuit_bench.rs  bounce_circuit_bench.rs  bounce_merge_circuit_bench.rs  circuit_benchmarks.rs  core_circuit_bench.rs  merge_circuit_bench.rs  utils_circuit_bench.rs
plonk/src/: lib.rs
plonk/src/client/: client_macros.rs  mod.rs  private_inputs.rs  structs.rs
plonk/src/client/circuits/: circuit_inputs.rs  client_circuit.rs  mint.rs  mod.rs  swap.rs  transfer.rs
plonk/src/client/circuits/mint/: circuit.rs  constants.rs  utils.rs
plonk/src/client/circuits/transfer/: circuit.rs  constants.rs  utils.rs
plonk/src/primitives/circuits/: mod.rs
plonk/src/primitives/circuits/kem_dem/: mod.rs
plonk/src/primitives/circuits/kem_dem/kem_dem_constants/: ed_on_bn254_base.rs  mod.rs  vesta_scalar.rs
plonk/src/primitives/circuits/merkle_tree/: mod.rs
plonk/src/primitives/circuits/poseidon/: gate.rs  mod.rs
plonk/src/primitives/circuits/poseidon/poseidon_constants/: constants.rs  ed_on_bn254_base.rs  mod.rs
plonk/src/rollup/circuits/: base.rs  bounce.rs  bounce_merge.rs  client_input.rs  merge.rs  mod.rs  structs.rs
plonk/src/rollup/circuits/base/: base_helpers.rs  circuit.rs  helpers.rs  mod.rs
plonk/src/rollup/circuits/base/tests/: mod.rs  test_helpers.rs
plonk/src/utils/: bench_utils.rs  key_gen.rs  mod.rs  poseidon_utils.rs  vk_tree.rs
plonk/src/utils/bench/: base copy.rs  base.rs  bounce.rs  merge.rs  mod.rs  tree.rs
sequencer/: Cargo.toml
sequencer/configuration/: base.yaml  local.yaml  production.yaml
sequencer/src/: main.rs
sequencer/src/adapters/rest_api/: handlers.rs  mod.rs
sequencer/src/adapters/rest_api/handlers/: sequence.rs  transactions.rs
sequencer/src/domain/: mod.rs
sequencer/src/ports/: prover.rs  storage.rs
sequencer/src/services/prover/: in_mem_sequencer_prover.rs  mod.rs
sequencer/src/services/storage/: in_mem_sequencer_storage.rs  mod.rs
sequencer/src/usecase/: build_block.rs  mod.rs
sequencer/src/usecase/block/: build.rs  inputs.rs  mod.rs
sequencer/src/utils/: circuits.rs
sequencer/tests/api/: helpers.rs  main.rs
sequencer/tests/api/helpers/: circuits.rs  client.rs
trees/: Cargo.toml
trees/benches/: benchmark.rs
trees/src/: lib.rs  membership_path.rs  membership_tree.rs  merkle_tree.rs  non_membership_tree.rs  sparse_merkle_tree.rs  tree.rs
trees/src/membership_tree/: append.rs  membership.rs
trees/src/non_membership_tree/: append.rs  membership.rs  non_membership.rs
