[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "client"

[dependencies]
# Arkworks Deps
ark-ec="0.4.2"
ark-ff="0.4.2"
ark-std="0.4.0"
ark-poly="0.4.2"
ark-serialize="0.4.2"

# JF Deps
 jf-plonk = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test", features = ["test-srs"]}
 jf-relation = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}
 jf-utils = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}
 jf-primitives = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}
 curves = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}
 #jf-plonk = {path = "../../jellyfish/plonk", features = ["test-srs"]}
 #jf-relation = {path = "../../jellyfish/relation"}
 #jf-utils = {path = "../../jellyfish/utilities"}
 #jf-primitives = {path = "../../jellyfish/primitives"}
 #curves = {path = "../../jellyfish/curves"}

common = {path = "../common"}
trees = {path = "../trees"}
plonk-prover = { path="../plonk"}
zk-macros = { path="../macros"}

num-bigint = {version = "0.4.4", features = ["serde"]}
bip32 = "0.5.1"
rand = { version = "0.8.5", features = ["std"]}
rand_chacha = "0.3.1"
tokio = {version = "1.29.1", features = ["full"]}
axum = { version = "0.7.7", features = ["json"]}
tracing = { version = "0.1.40", features = ["log"]}
tracing-log = "0.1"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
dotenvy = "0.15.7"
derivative = "2.2.0"
anyhow = "1"


[dev-dependencies]
once_cell = "1"
bip39 = {version = "2.1", features = ["rand", "french"]}
itertools = "0.13.0"
random_word = { version = "0.4.2", features = ["en"] }
wiremock = "0.5"

