[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
ark-ec="0.4.2"
ark-ff="0.4.2"
ark-std="0.4.0"
ark-poly="0.4.2"
ark-serialize="0.4.2"

jf-plonk = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test", features = ["test-srs"]}
jf-relation = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}
jf-utils = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}
jf-primitives = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}
curves = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}

thiserror="1.0.50"
poseidon-paramgen="0.4.0"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
derivative = "2.2.0"
num-bigint = {version = "0.4.4", features = ["serde"]}
num-traits = "0.2.17"
tokio = {version = "1.29.1", features = ["full"]}
tracing = { version = "0.1.40", features = ["log"]}
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
serde-aux = "3"
config = "0.14"
async-trait = "0.1.83"
anyhow = "1"
reqwest = {version = "0.11.22", features = ["json"]}


[[example]]
name="poseidon-gen"
path = "examples/poseidon_gen.rs"

