[package]
name = "plonk-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Arkworks Deps
ark-bn254="0.4.0"
ark-ed-on-bn254="0.4.0"
ark-ec="0.4.2"
ark-ff={ version =  "0.4.2", features = ["asm"]}
ark-std="0.4.0"
ark-poly="0.4.2"
ark-serialize= "0.4.2"

# Jellyfish Deps
jf-plonk = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master", features = ["test-srs"]}
jf-relation = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
jf-utils = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
jf-primitives = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}
curves = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "master"}

# poseidon-ark = {git = "https://github.com/arnaucube/poseidon-ark.git", branch = "main"}
common = {path = "../common"}
trees = {path = "../trees"}

rayon = "1.8.0"
serde = "1.0.192"
serde_json = "1.0.108"
num-bigint = {version = "0.4.4", features = ["serde"]}
num-traits = "0.2.17"
itertools = "0.12.0"


[dev-dependencies]
criterion = "0.5.1"


[features]
default = ["parallel"]
std = [
    "ark-std/std",
    "ark-serialize/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-poly/std",
    "itertools/use_std",
    "jf-primitives/std",
    "jf-relation/std",
    "jf-utils/std",
    "num-bigint/std",
]
test_apis = [] # exposing apis for testing purpose
parallel = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "jf-utils/parallel",
    "jf-relation/parallel",
    "jf-primitives/parallel",
]


[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3


[[bench]]
name = "core_circuit_bench"
harness = false

[[bench]]
name = "utils_circuit_bench"
harness = false
