[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "sequencer"

[dependencies]
ark-ec="0.4.2"
ark-ff="0.4.2"
ark-std="0.4.0"
ark-poly="0.4.2"

# JF Deps
jf-plonk = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test", features = ["test-srs"]}
jf-relation = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}
jf-utils = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}
jf-primitives = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}
curves = {git = "ssh://git@github.com/Torus-ZK/jellyfish.git", branch = "test"}

common = {path = "../common"}
trees = {path = "../trees"}
plonk-prover = { path="../plonk"}
zk-macros = { path="../macros"}

tokio = {version = "1.29.1", features = ["full"]}
axum = { version = "0.7.7", features = ["json"]}
tracing-log = "0.1"
tracing = { version = "0.1.40", features = ["log"]}
dotenvy = "0.15.7"
serde = {version = "1.0.192", features = ["derive"]}
reqwest = {version = "0.11.22", features = ["json"]}
rand = { version = "0.8.5", features = ["std"]}
rand_chacha = "0.3.1"
anyhow = "1"
serde_cbor ="0.11.2"
axum-serde = {version ="0.7.0", features = ["cbor"]}


[dev-dependencies]
once_cell = "1"
bip39 = {version = "2.1", features = ["rand", "french"]}
itertools = "0.13.0"
random_word = { version = "0.4.2", features = ["en"] }
wiremock = "0.5"